Added ZRCP command: "close-all-menus"
Added icon/F-key to open any window identified by its name (TODO: now F-keys can have parameters, like window name)
Added XEyes "Toy" to follow mouse

* Improvements:

Improved Configuration:
- better parsing: warning when ZEsarUX has been downgraded
- moved showing Configuration file from Running info menu to Settings-> Configuration file

Improved DSK viewer:
- better filesystem detection
- show hidden and read only files
- show disk specification format
- show where files are located on Visual Floppy

Improved DSK extractor:
- better filesystem detection

Improved Debug Console: better refresh, dynamic width??
Improved Debug Messages: allow to filter by message class (DSK, PD765, etc...)
Improved Debug I/O ports window: autoresize content height when do not fit in window

Improved Debug CPU:
- switched function keys "m" and "o": now "x" change mode, and "m" change memptr (to be coherent with other similar windows) 
- added (hl), (de), (bc)
- added (nn) when selecting an opcode like: ld reg,(nn) and ld (nn),reg
- added (ix+d), (iy+d) when selecting an opcode like: ld reg,(IX+d), etc
- added continuos speed 4 (run 10 opcodes every time, with no pause)
- show last memory pointer when changing it
- show B register on satisfy condition for DJNZ

Improved View Sprites: 
- sprite is no longer disabled when changing memory pointer
- you can view sprites up to 1024x1024
- show PCW common format screen

Improved changing pointer on some windows: can use an expression when changing memory pointer on Debug CPU, View Sprites, Hexdump, Disassemble, Poke
Improved changing to machines with big displays (Next, QL, CPC...): zoom is autochanged to 1

Improved ZX Desktop:
- Dynamic icons (Trash, My Machine, ...) assigned on top buttons now show dynamic state (trash empty/full, current machine image, etc)
- Show icon indicators for open apps on ZX Desktop
- Added setting to empty Trash on exit